[project]
name = "clothes-ms-zhang"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain[openai]>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "load-dotenv>=0.1.0",
    "python-dotenv>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph>=1.2.2",
    "langchain-core>=1.4.0",
    "path>=17.1.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "streamlit>=1.58.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
]
